crates/walrus-codegen/snapshots/field_expr.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: llvm_module.print_to_string().to_string()

---
; ModuleID = 'module'
source_filename = "module"

%Foo = type { i32, i32 }

define void @builtins.exit.wrapper(i8* %env, i32 %status) {
  call void @exit(i32 %status)
  unreachable
}

declare void @exit(i32)

define i32 @builtins.putchar.wrapper(i8* %env, i32 %c) {
  %1 = call i32 @putchar(i32 %c)
  ret i32 %1
}

declare i32 @putchar(i32)

define i32 @main(i8* %main.env) {
main.entry:
  %Foo.alloca = alloca %Foo, align 8
  %Foo.x = getelementptr inbounds %Foo, %Foo* %Foo.alloca, i32 0, i32 0
  store i32 5, i32* %Foo.x, align 4
  %Foo.y = getelementptr inbounds %Foo, %Foo* %Foo.alloca, i32 0, i32 1
  store i32 6, i32* %Foo.y, align 4
  %Foo = load %Foo, %Foo* %Foo.alloca, align 4
  %foo.alloca = alloca %Foo, align 8
  store %Foo %Foo, %Foo* %foo.alloca, align 4
  %foo = load %Foo, %Foo* %foo.alloca, align 4
  %Foo.y1 = extractvalue %Foo %foo, 1
  ret i32 %Foo.y1
}

