crates/walrus-codegen/snapshots/id_fn.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define void @builtins.exit(i32 %status) {
  call void @exit(i32 %status)
  unreachable
}

declare void @exit(i32)

define {} @builtins.putchar(i32 %c) {
  %1 = call i32 @putchar(i32 %c)
  ret {} zeroinitializer
}

declare i32 @putchar(i32)

define i32 @main() {
main.entry:
  %id.call = call i32 @id(i32 5)
  ret i32 %id.call
}

define i32 @id(i32 %id.params.0) {
id.entry:
  %x.alloca = alloca i32, align 4
  store i32 %id.params.0, i32* %x.alloca, align 4
  %x = load i32, i32* %x.alloca, align 4
  ret i32 %x
}

