crates/walrus-codegen/snapshots/if_then_else_true.snap
---
source: crates/walrus-codegen/src/codegen.rs
expression: llvm_module.print_to_string().to_string()

---
; ModuleID = 'module'
source_filename = "module"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"

define i32 @main(i8* %main.env) {
main.entry:
  br i1 true, label %if.then, label %if.else

if.then:                                          ; preds = %main.entry
  br label %if.end

if.else:                                          ; preds = %main.entry
  br label %if.end

if.end:                                           ; preds = %if.else, %if.then
  %if.merge = phi i32 [ 1, %if.then ], [ 0, %if.else ]
  ret i32 %if.merge
}

