crates/walrus-codegen/snapshots/if_then_false.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define {} @main() {
main.entry:
  br i1 false, label %if.then, label %if.else

if.then:                                          ; preds = %main.entry
  br label %if.end

if.else:                                          ; preds = %main.entry
  br label %if.end

if.end:                                           ; preds = %if.else, %if.then
  %if.merge = phi {} [ zeroinitializer, %if.then ], [ zeroinitializer, %if.else ]
  ret {} %if.merge
}

